# hippius-skill

./: .gitignore  CONTEXT.md  PLAN.md  PLAN_V2.md  README.md  SKILL.md  pyproject.toml
.kilo/skills/engineering/grill-with-docs/: CONTEXT-FORMAT.md
docs/adr/: 0001-gpg-symmetric-encryption.md  0002-local-config-key-management.md  0003-streaming-with-on-the-fly-hashing.md  0004-flat-namespace.md
scripts/: integration_test.sh
src/hippius_skill/: __init__.py  app.ini  cli.py  config.py  crypto.py  hippius_client.py  storage.py
tests/: test_cli.py  test_config.py  test_crypto.py  test_hippius_client.py  test_storage.py
