[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hippius-skill"
dynamic = ["version"]
description = "CLI tool for securely storing and retrieving encrypted files from the Hippius storage system."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["hippius", "s3", "encryption", "storage", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
]
dependencies = [
    "boto3>=1.28.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
hippius-skill = "hippius_skill.cli:cli"

[project.urls]
Homepage = "https://github.com/example/hippius-skill"

[tool.hatch.version]
path = "src/hippius_skill/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hippius_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
